# aventuro

./: .gitignore  README.md  avt-formato.md  elkodigu-aĵojn.py  elkodigu-fenomenojn.py  elkodigu-monstrojn.py  elkodigu-salonojn.py  elkodigu-sinonimojn.py  elkodigu.py  emscripten-cross.txt  listigu-verbojn.py  meson.build  notoj.txt
dokumentoj/: avt-formato.md  debug.txt  kreu-ludon.md
ludoj/: kongreso1.avt
retpaĝo/: aventuro.css  help.html  index.html  ludu-avt.js  meson.build  redaktilo.html
skriptoj/: elkodigu-aĵojn.py  elkodigu-fenomenojn.py  elkodigu-monstrojn.py  elkodigu-salonojn.py  listigu-ĉenojn.py  multaj-aĵoj.py  multajn-salonojn.py  purigu-avt.py
src/: avt-load.c  meson.build  pcx-avt-command.c  pcx-avt-command.h  pcx-avt-hat.c  pcx-avt-hat.h  pcx-avt-load-file.c  pcx-avt-load-file.h  pcx-avt-load.c  pcx-avt-load.h  pcx-avt-state.c  pcx-avt-state.h  pcx-avt.c  pcx-avt.h  pcx-buffer.c  pcx-buffer.h  pcx-error.h  pcx-file-error.c  pcx-file-error.h  pcx-lexer.c  pcx-lexer.h  pcx-list.h  pcx-load-or-parse.c  pcx-load-or-parse.h  pcx-parser.c  pcx-parser.h  pcx-source.h  pcx-utf8.c  pcx-utf8.h  pcx-util.c  pcx-util.h  play-avt.c  test-avt-command.c  test-avt.c  test-parser.c  test-utf8.c
src/tests/: aliases.avt  aliases.txt  burn.avt  burn.txt  contain.avt  contain.txt  direction-rules.avt  direction-rules.txt  extra-command-items.avt  extra-command-items.txt  kongreso.txt  multi-verb.avt  multi-verb.txt  new-actions.avt  new-actions.txt  optional-adjective.avt  optional-adjective.txt  rules.avt  rules.txt  subroutine.avt  subroutine.txt
